# TankaqC

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  build_log.txt  build_only.ps1  build_when_free.ps1  ct_exit.txt  loopback_test.ps1  probe_d3d12.ps1  readerr.ps1  readfail.ps1  readlog2.ps1  readtest.ps1  rebuild_if_free.ps1  run_ct.ps1  run_tests.ps1  temple_shot.ps1
assets/: test_rig.glb
assets/Deco/: GrayWall.fbx  GrayWall.glb  GrayWallEnterenceUV.fbx  GrayWallEntrance.glb  GrayWallUV.fbx  Leafes.fbx  Leaves.glb  Tree.fbx  Tree.glb
assets/Skull/: Skull.glb
assets/Tank2/: TankBody.fbx  TankBody.glb  TankC.fbx  TankC.glb  TankCylinder.fbx  TankCylinder.glb  TankS.fbx  TankS.glb  TankSC.fbx  TankSC.glb  TankTurretBody.fbx  TankTurretBody.glb  TankTurretEnd.fbx  TankTurretEnd.glb  pivot.txt
assets/Temple/: TempleBody.fbx  TempleBody.glb  TemplePlants.fbx  TemplePlants.glb  TempleStairs.fbx  TempleStairs.glb
assets/tank/: LICENSE.md  tank_baked.glb  tank_meta.txt
res/: Tankaq.manifest  Tankaq.rc
shaders/: Basic.hlsl  Post.hlsl  Vfx.hlsl
src/: Anim.cpp  Anim.h  AppState.h  AssetLoad.cpp  AssetLoad.h  Game.cpp  Game.h  GpuDetect.cpp  GpuDetect.h  Log.h  Main.cpp  Sound.cpp  Sound.h  Tests.cpp  Ui.cpp  Ui.h  UiHud.cpp  UiShop.cpp  Version.h
src/net/: Net.cpp  Net.h  Protocol.h
src/render/: IRenderer.h  RendererD3D11.cpp  RendererD3D12.cpp
tools/: bake_tank.py
